--- a/pages/test.html
+++ b/pages/test.html
@@ -12,7 +12,7 @@
     <meta content="Web site created using create-react-app" name="description" />
     <link href="/portifolio/logo192.png" rel="apple-touch-icon" />
     <link href="/portifolio/manifest.json" rel="manifest" />
-    <title>Back-end</title>
+    <title>Test</title>
     
   </head>
   <body>
@@ -72,7 +72,7 @@
               class="foto-perfil"
             />
             <div class="box-titulo">
-              Back-end
+              Test
               <div class="icones-contato">
                 <a href="https://github.com/cristianrs-dev">
                   <img
