implementação da pagina about

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                   <li><a href="index.html">Front-end</a></li>
                   <li><a href="/pages/backend.html">Back-end</a></li>
                   <li><a href="#testes">Testes</a></li>
-                  <li><a href="#sobre">Sobre</a></li>
+                  <li><a href="pages/about.html">Sobre</a></li>
                   <li><a href="https://cristianrs-dev.github.io/coders-academy/" target="_blank">Serviços</a></li>
                 </ul>
               </nav>
@@ -42,7 +42,7 @@
                   <li><a href="index.html">Front-end</a></li>
                   <li><a href="/pages/backend.html">Back-end</a></li>
                   <li><a href="#testes">Testes</a></li>
-                  <li><a href="#sobre">Sobre</a></li>
+                  <li><a href="pages/about.html">Sobre</a></li>
                   <li><a href="https://cristianrs-dev.github.io/coders-academy/" target="_blank">Serviços</a></li>
                 </ul>
               </nav>
