--- a/pages/test.html
+++ b/pages/test.html
@@ -26,7 +26,7 @@
             <li><a href="/index.html">Front-end</a></li>
             <li><a href="/pages/backend.html">Back-end</a></li>
             <li><a href="test.html">Testes</a></li>
-            <li><a href="#sobre">Sobre</a></li>
+            <li><a href="about.html">Sobre</a></li>
             <li><a href="https://cristianrs-dev.github.io/coders-academy/" target="_blank">Serviços</a></li>
           </ul>
         </nav>
@@ -44,7 +44,7 @@
             <li><a href="/index.html">Front-end</a></li>
             <li><a href="/pages/backend.html">Back-end</a></li>
             <li><a href="test.html">Testes</a></li>
-            <li><a href="#sobre">Sobre</a></li>
+            <li><a href="about.html">Sobre</a></li>
             <li><a href="https://cristianrs-dev.github.io/coders-academy/" target="_blank">Serviços</a></li>
           </ul>
         </nav>
