ajuste do link do backend

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                 <ul class="nav-list">
                   
                   <li><a href="index.html">Front-end</a></li>
-                  <li><a href="/pages/backend.html">Back-end</a></li>
-                  <li><a href="#testes">Testes</a></li>
+                  <li><a href="pages/backend.html">Back-end</a></li>
+                  <li><a href="pages/test.html">Testes</a></li>
                   <li><a href="pages/about.html">Sobre</a></li>
                   <li><a href="https://cristianrs-dev.github.io/coders-academy/" target="_blank">Serviços</a></li>
                 </ul>
@@ -40,8 +40,8 @@
                 <ul>
                   
                   <li><a href="index.html">Front-end</a></li>
-                  <li><a href="/pages/backend.html">Back-end</a></li>
-                  <li><a href="#testes">Testes</a></li>
+                  <li><a href="pages/backend.html">Back-end</a></li>
+                  <li><a href="pages/test.html">Testes</a></li>
                   <li><a href="pages/about.html">Sobre</a></li>
                   <li><a href="https://cristianrs-dev.github.io/coders-academy/" target="_blank">Serviços</a></li>
                 </ul>
