ajustes nos links

--- a/pages/about.html
+++ b/pages/about.html
@@ -71,7 +71,7 @@
         <nav class="navbar">
           <ul class="nav-list">
             <li><a href="/index.html">Front-end</a></li>
-            <li><a href="/pages/backend.html">Back-end</a></li>
+            <li><a href="backend.html">Back-end</a></li>
             <li><a href="test.html">Testes</a></li>
             <li><a href="about.html">Sobre</a></li>
             <li><a href="https://cristianrs-dev.github.io/coders-academy/" target="_blank">Serviços</a></li>
