--- a/pages/backend.html
+++ b/pages/backend.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link href="/portifolio/favicon.ico" rel="icon" />
-    <link rel="stylesheet" href="../css/style.css>
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/responsive.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
