teste das rotas de imagens

--- a/pages/backend.html
+++ b/pages/backend.html
@@ -57,7 +57,7 @@
               >
                 <img
                   alt="Ícone do WhatsApp"
-                  src="/img/whatsapp.png"
+                  src="../img/whatsapp.png"
                 />
               </a>
             </div>
