--- a/pages/about.html
+++ b/pages/about.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <link href="/portifolio/favicon.ico" rel="icon" />
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/responsive.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/responsive.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     <meta content="width=device-width,initial-scale=1" name="viewport" />
