--- a/pages/test.html
+++ b/pages/test.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <link href="/portifolio/favicon.ico" rel="icon" />
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/responsive.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/responsive.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     <meta content="width=device-width,initial-scale=1" name="viewport" />
@@ -24,7 +24,7 @@
           <ul class="nav-list">
             
             <li><a href="/index.html">Front-end</a></li>
-            <li><a href="/pages/backend.html">Back-end</a></li>
+            <li><a href="backend.html">Back-end</a></li>
             <li><a href="test.html">Testes</a></li>
             <li><a href="about.html">Sobre</a></li>
             <li><a href="https://cristianrs-dev.github.io/coders-academy/" target="_blank">Serviços</a></li>
