ajustes nas rotas do backend

--- a/pages/backend.html
+++ b/pages/backend.html
@@ -68,7 +68,7 @@
           <div class="box-banner">
             <img
               alt="foto perfil"
-              src="/img/perfil.jpg"
+              src="../img/perfil.jpg"
               class="foto-perfil"
             />
             <div class="box-titulo">
@@ -77,14 +77,14 @@
                 <a href="https://github.com/cristianrs-dev">
                   <img
                     alt="github"
-                    src="/img/github.png"
+                    src="../img/github.png"
                     class="icone"
                   />
                 </a>
                 <a href="https://www.linkedin.com/in/cristianrds/">
                   <img
                     alt="linkedin"
-                    src="/img/linkedin.png"
+                    src="../img/linkedin.png"
                     class="icone"
                   />
                 </a>
@@ -101,42 +101,42 @@
             <div class="item-card-skill">
               <img
                 alt="javascript"
-                src="/img/js.png"
+                src="../img/js.png"
                 class="img-skill"
               />
             </div>
             <div class="item-card-skill">
               <img
                 alt="node.js"
-                src="/img/nodejs (1).png"
+                src="../img/nodejs (1).png"
                 class="img-skill"
               />
             </div>
             <div class="item-card-skill">
               <img
                 alt="java"
-                src="/img/java-original.svg"
+                src="../img/java-original.svg"
                 class="img-skill"
               />
             </div>
             <div class="item-card-skill">
               <img
                 alt="mongoDB"
-                src="/img/mongodb-original-wordmark.svg"
+                src="../img/mongodb-original-wordmark.svg"
                 class="img-skill"
               />
             </div>
             <div class="item-card-skill">
               <img
                 alt="firebase"
-                src="/img/file-type-firebase.svg"
+                src="../img/file-type-firebase.svg"
                 class="img-skill"
               />
             </div>
             <div class="item-card-skill">
               <img
                 alt="Mysql"
-                src="/img/mysql.png"
+                src="../img/mysql.png"
                 class="img-skill"
               />
             </div>
@@ -150,7 +150,7 @@
                 <div class="card-imagem">
                   <img
                     alt="pagina conteudo"
-                    src="/img/inConstruction.png"
+                    src="../img/inConstruction.png"
                     class="imagem-projeto"
                   />
                 </div>
@@ -162,12 +162,12 @@
                   </p>
                   <img
                     alt="HTML"
-                    src="/img/html-5.png"
+                    src="../img/html-5.png"
                     class="skill"
                   />
                   <img
                     alt="CSS"
-                    src="/img/css.png"
+                    src="../img/css.png"
                     class="skill"
                   />
                 </div>
@@ -178,7 +178,7 @@
                 <div class="card-imagem">
                   <img
                     alt="pagina conteudo"
-                    src="/img/inConstruction.png"
+                    src="../img/inConstruction.png"
                     class="imagem-projeto"
                   />
                 </div>
@@ -190,17 +190,17 @@
                   </p>
                   <img
                     alt="HTML"
-                    src="/img/html-5.png"
+                    src="../img/html-5.png"
                     class="skill"
                   />
                   <img
                     alt="CSS"
-                    src="/img/css.png"
+                    src="../img/css.png"
                     class="skill"
                   />
                   <img
                     alt="javascript"
-                    src="/img/js.png"
+                    src="../img/js.png"
                     class="skill"
                   />
                 </div>
@@ -211,7 +211,7 @@
                   <div class="card-imagem">
                     <img
                       alt="app pay"
-                      src="/img/inConstruction.png"
+                      src="../img/inConstruction.png"
                       class="imagem-projeto"
                     />
                   </div>
@@ -224,17 +224,17 @@
                     </p>
                     <img
                       alt="Bootstrap"
-                      src="/img/bootstrap.png"
+                      src="../img/bootstrap.png"
                       class="skill"
                     />
                     <img
                       alt="javascript"
-                      src="/img/js.png"
+                      src="../img/js.png"
                       class="skill"
                     />
                     <img
                       alt="figma"
-                      src="/img/figma.png"
+                      src="../img/figma.png"
                       class="skill"
                     />
                   </div>
@@ -246,7 +246,7 @@
                   <div class="card-imagem">
                     <img
                       alt="hotel do norte"
-                      src="/img/inConstruction.png"
+                      src="../img/inConstruction.png"
                       class="imagem-projeto"
                     />
                   </div>
@@ -259,17 +259,17 @@
                     </p>
                     <img
                       alt="Bootstrap"
-                      src="/img/bootstrap.png"
+                      src="../img/bootstrap.png"
                       class="skill"
                     />
                     <img
                       alt="javascript"
-                      src="/img/js.png"
+                      src="../img/js.png"
                       class="skill"
                     />
                     <img
                       alt="figma"
-                      src="/img/figma.png"
+                      src="../img/figma.png"
                       class="skill"
                     />
                   </div>
@@ -281,7 +281,7 @@
                   <div class="card-imagem">
                     <img
                       alt="site Banc"
-                      src="/img/inConstruction.png"
+                      src="../img/inConstruction.png"
                       class="imagem-projeto"
                     />
                   </div>
@@ -294,17 +294,17 @@
                     </p>
                     <img
                       alt="Bootstrap"
-                      src="/img/bootstrap.png"
+                      src="../img/bootstrap.png"
                       class="skill"
                     />
                     <img
                       alt="javascript"
-                      src="/img/js.png"
+                      src="../img/js.png"
                       class="skill"
                     />
                     <img
                       alt="figma"
-                      src="/img/figma.png"
+                      src="../img/figma.png"
                       class="skill"
                     />
                   </div>
@@ -316,7 +316,7 @@
                   <div class="card-imagem">
                     <img
                       alt="crudStore"
-                      src="/img/inConstruction.png"
+                      src="../img/inConstruction.png"
                       class="imagem-projeto"
                     />
                   </div>
@@ -325,12 +325,12 @@
                     <p>Projeto pessoal onde foram aplicados conceitos de bootstrap, javascript e LocalStorage</p>
                     <img
                       alt="Bootstrap"
-                      src="/img/bootstrap.png"
+                      src="../img/bootstrap.png"
                       class="skill"
                     />
                     <img
                       alt="javascript"
-                      src="/img/js.png"
+                      src="../img/js.png"
                       class="skill"
                     />
                   </div>
@@ -370,25 +370,25 @@
                 <a href="https://www.instagram.com/coders.cademy/">
                   <img
                     alt="Instagram"
-                    src="/img/instagram.png"
+                    src="../img/instagram.png"
                   />
                 </a>
                 <a href="https://www.instagram.com/coders.cademy/">
                   <img
                     alt="github"
-                    src="/img/github.png"
+                    src="../img/github.png"
                   />
                 </a>
                 <a href="https://wa.me/5592981336790?text=">
                   <img
                     alt="whatsapp"
-                    src="/img/whatsapp1.png"
+                    src="../img/whatsapp1.png"
                   />
                 </a>
                 <a href="https://www.linkedin.com/in/cristianrds/">
                   <img
                     alt="LinkedIn"
-                    src="/img/linkedin.png"
+                    src="../img/linkedin.png"
                   />
                 </a>
               </div>
@@ -396,7 +396,7 @@
                 <a href="#topo">
                   <img
                     alt="de_volta_ao_topo"
-                    src="/img/de-volta-ao-topo.png"
+                    src="../img/de-volta-ao-topo.png"
                     class="btnTopo"
                   />
                 </a>
@@ -406,7 +406,7 @@
               <p>© 2020 Coders Academy. Todos os direitos reservados.</p>
             </div>
           </footer>
-          <script src="/js/script.js"></script>
+          <script src="../js/script.js"></script>
         <script>
           alert("pagina em construção")
         </script>
