ajustes nas rotas do about

--- a/pages/about.html
+++ b/pages/about.html
@@ -87,16 +87,16 @@
 
     <div class="banner">
         <div class="box-banner">
-          <img alt="foto perfil" src="/img/perfil.jpg" class="foto-perfil" />
+          <img alt="foto perfil" src="../img/perfil.jpg" class="foto-perfil" />
           <div class="box-titulo">
             <h1>Cristian Ramos</h1>
             <p>Desenvolvedor Full Stack | Professor de Informática | Consultor de TI</p>
             <div class="icones-contato">
               <a href="https://github.com/cristianrs-dev">
-                <img alt="github" src="/img/github.png" class="icone" />
+                <img alt="github" src="../img/github.png" class="icone" />
               </a>
               <a href="https://www.linkedin.com/in/cristianrds/">
-                <img alt="linkedin" src="/img/linkedin.png" class="icone" />
+                <img alt="linkedin" src="../img/linkedin.png" class="icone" />
               </a>
             </div>
           </div>
@@ -126,31 +126,31 @@
                 <div class="carousel-container">
                   <div class="carousel-slide">
                     <div class="carousel-item">
-                      <img src="/img/linguagemJava.jpg" alt="Certificado 1" />
+                      <img src="../img/linguagemJava.jpg" alt="Certificado 1" />
                       <p><strong>Java + Spring</strong></p>
                     </div>
                     <div class="carousel-item">
-                      <img src="/img/desenvolvimentoWeb.jpg" alt="Certificado 2" />
+                      <img src="../img/desenvolvimentoWeb.jpg" alt="Certificado 2" />
                       <p><strong>Desenvolvimento Web</strong></p>
                     </div>
                     <div class="carousel-item">
-                      <img src="/img/modUML.jpg" alt="Certificado 3" />
+                      <img src="../img/modUML.jpg" alt="Certificado 3" />
                       <p><strong>Modelagem UML</strong></p>
                     </div>
                     <div class="carousel-item">
-                        <img src="/img/frontEnd.png" alt="Certificado 3" />
+                        <img src="../img/frontEnd.png" alt="Certificado 3" />
                         <p><strong>Front-end - 1</strong></p>
                     </div>
                     <div class="carousel-item">
-                        <img src="/img/frontEnd2.png" alt="Certificado 3" />
+                        <img src="../img/frontEnd2.png" alt="Certificado 3" />
                         <p><strong>Front-end - 2</strong></p>
                     </div>
                     <div class="carousel-item">
-                        <img src="/img/Reactjs.png" alt="Certificado 3" />
+                        <img src="../img/Reactjs.png" alt="Certificado 3" />
                         <p><strong>Reactjs</strong></p>
                     </div>
                     <div class="carousel-item">
-                        <img src="/img/backEnd.png" alt="Certificado 3" />
+                        <img src="../img/backEnd.png" alt="Certificado 3" />
                         <p><strong>Nodjs + MongoDB</strong></p>
                     </div>
                   </div>
@@ -178,16 +178,16 @@
         <div class="footer-social">
           <h3>Siga-nos</h3>
           <a href="https://www.instagram.com/coders.cademy/">
-            <img alt="Instagram" src="/img/instagram.png" />
+            <img alt="Instagram" src="../img/instagram.png" />
           </a>
           <a href="https://www.instagram.com/coders.cademy/">
-            <img alt="github" src="/img/github.png" />
+            <img alt="github" src="../img/github.png" />
           </a>
           <a href="https://wa.me/5592981336790?text=">
-            <img alt="whatsapp" src="/img/whatsapp1.png" />
+            <img alt="whatsapp" src="../img/whatsapp1.png" />
           </a>
           <a href="https://www.linkedin.com/in/cristianrds/">
-            <img alt="LinkedIn" src="/img/linkedin.png" />
+            <img alt="LinkedIn" src="../img/linkedin.png" />
           </a>
         </div>
       </div>
