ajustes no conteudo

--- a/pages/about.html
+++ b/pages/about.html
@@ -85,6 +85,17 @@
       </div>
     </header>
 
+    <nav class="sidebar" id="sidebar">
+      <button id="close-btn">X</button>
+      <ul>
+        
+        <li><a href="/index.html">Front-end</a></li>
+        <li><a href="/pages/backend.html">Back-end</a></li>
+        <li><a href="test.html">Testes</a></li>
+        <li><a href="about.html">Sobre</a></li>
+        <li><a href="https://cristianrs-dev.github.io/coders-academy/" target="_blank">Serviços</a></li>
+      </ul>
+    </nav>
     <div class="banner">
         <div class="box-banner">
           <img alt="foto perfil" src="../img/perfil.jpg" class="foto-perfil" />
@@ -106,7 +117,7 @@
     <main class="main">
         <div class="item-card-skill" style="width:auto; margin:50px; padding: 50px;">
             <h3>Habilidades Técnicas</h3>
-            <p>Sou especializado em desenvolvimento Full Stack, com experiência em uma variedade de tecnologias e metodologias:</p>
+            <p>Sou Desenvolvedor Full Stack, com experiência em uma variedade de tecnologias e metodologias:</p>
             <ul>
               <li>Desenvolvimento Web: HTML, CSS, JavaScript, React, Node.js, Java, Spring Boot</li>
               <li>Banco de Dados: MySQL, MongoDB, Firebase</li>
@@ -187,7 +198,7 @@
         </div>
       </div>
     </footer>
-
+    <script src="../js/script.js"></script>
     <script>
         let index = 0;
 const items = document.querySelectorAll('.carousel-item');
